# EEG-Based-Stress-Recognition-Using-Neural-Networks

./: .gitignore  Assignment n1.pptx  README.md  data_analysis.ipynb  date_analysis.ipynb  main.py  main_cla.py  main_reg.py  neural_network.ipynb  pyproject.toml  requirements.txt  requirements_torch.txt  test.py  ~$Assignment n1.pptx
Data/: scales.xls  scales.xlsx
Data/SKLFast_ICA_filtered_data/: Arithmetic_sub_10_trial1.mat  Arithmetic_sub_10_trial2.mat  Arithmetic_sub_10_trial3.mat  Arithmetic_sub_11_trial1.mat  Arithmetic_sub_11_trial2.mat  Arithmetic_sub_11_trial3.mat  Arithmetic_sub_12_trial1.mat  Arithmetic_sub_12_trial2.mat  Arithmetic_sub_12_trial3.mat  Arithmetic_sub_13_trial1.mat  Arithmetic_sub_13_trial2.mat  Arithmetic_sub_13_trial3.mat  Arithmetic_sub_14_trial1.mat  Arithmetic_sub_14_trial2.mat  Arithmetic_sub_14_trial3.mat  Arithmetic_sub_15_trial1.mat  Arithmetic_sub_15_trial2.mat  Arithmetic_sub_15_trial3.mat  Arithmetic_sub_16_trial1.mat  Arithmetic_sub_16_trial2.mat  Arithmetic_sub_16_trial3.mat  Arithmetic_sub_17_trial1.mat  Arithmetic_sub_17_trial2.mat  Arithmetic_sub_17_trial3.mat  Arithmetic_sub_18_trial1.mat  Arithmetic_sub_18_trial2.mat  Arithmetic_sub_18_trial3.mat  Arithmetic_sub_19_trial1.mat  (+452 more)
Models/: Model_cla_eeg.pth  Model_cla_gru.pth  Model_cla_lstm.pth
support_func/: NN_classes.py  cleaning_algos.py  data_processing.py  dataset_class.py  early_stopping_class.py  filter_all_data.py  import_data.py  model_processing.py  model_processing_cla.py  model_processing_reg.py  neural_networks_classes.py  results_evaluation.py
(+960 files in other folders)
