[project]
name = "eeg-based-stress-recognition-using-neural-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "mne>=1.3",
    "numpy>=1.24",
    "pandas>=1.5",
    "pywavelets>=1.4",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "seaborn>=0.12",
    "torch>=1.13",
    "torchmetrics>=0.11",
    "xlrd>=2.0.2",
]
